--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Hello Coursera</title>
 </head>
-	<h1>Hello Coursera! Does this work??</h1>
+	<h1>Hello Coursera! This is awesome.</h1>
 <body>
 </body>
 </html>
